--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -12,6 +12,6 @@ jobs:
         uses: rtCamp/action-wordpress-org-plugin-deploy@master
         env:
           EXCLUDE_LIST: .gitignore .distignore README.md phpcs.xml assets/package-lock.json screenshots/backend-gif.gif screenshots/frontend-gif.gif
-          SLUG: nginx-helper
+          SLUG: wp-menu-custom-fields
           WORDPRESS_PASSWORD: ${{ secrets.WORDPRESS_PASSWORD }}
           WORDPRESS_USERNAME: ${{ secrets.WORDPRESS_USERNAME }}
