Add languages folder and update package files

--- a/assets/package.json
+++ b/assets/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "wp-menu-custom-fields",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"description": "Adds custom fields on nav menu edit screen and shows it on site menu.",
 	"author": "rtCamp",
 	"license": "MIT",
@@ -11,6 +11,8 @@
 		"clean": "rm -rf build/*",
 		"lint-css": "npx stylelint src/sass/**/*.scss --syntax scss",
 		"lint-js": "npx eslint src/js/",
+		"language:make-po": "wp i18n make-pot ../ --exclude=\"assets\" ../languages/wp-menu-custom-fields.po",
+		"language": "run-s \"language:*\"",
 		"test": "jest  --verbose"
 	},
 	"dependencies": {
@@ -18,22 +20,23 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.8.6",
-		"@babel/preset-env": "^7.8.6",
-		"autoprefixer": "^9.7.4",
+		"@babel/preset-env": "^7.9.5",
+		"autoprefixer": "^9.7.6",
 		"babel-loader": "^8.0.6",
 		"clean-webpack-plugin": "^3.0.0",
 		"cross-env": "^7.0.0",
-		"css-loader": "^3.4.2",
+		"css-loader": "^3.5.2",
 		"css-mqpacker": "^7.0.0",
 		"cssnano": "^4.1.10",
 		"eslint": "^6.8.0",
 		"eslint-config-wordpress": "^2.0.0",
-		"eslint-loader": "^3.0.3",
+		"eslint-loader": "^3.0.4",
 		"file-loader": "^5.1.0",
-		"foundation-sites": "^6.6.2",
-		"jest": "^25.2.4",
+		"foundation-sites": "^6.6.3",
+		"jest": "^25.4.0",
 		"mini-css-extract-plugin": "^0.9.0",
 		"node-sass": "^4.13.1",
+		"npm-run-all": "^4.1.5",
 		"optimize-css-assets-webpack-plugin": "^5.0.3",
 		"postcss-assets": "^5.0.0",
 		"postcss-loader": "^3.0.0",
@@ -43,12 +46,12 @@
 		"replace-in-file": "^5.0.2",
 		"sass-loader": "^8.0.2",
 		"serialize-javascript": "^3.0.0",
-		"style-loader": "^1.1.3",
-		"stylelint": "^13.2.0",
+		"style-loader": "^1.1.4",
+		"stylelint": "^13.3.3",
 		"stylelint-config-wordpress": "^16.0.0",
 		"stylelint-webpack-plugin": "^1.2.3",
 		"uglifyjs-webpack-plugin": "^2.2.0",
-		"webpack": "^4.41.6",
+		"webpack": "^4.43.0",
 		"webpack-cli": "^3.3.11"
 	},
 	"browserslist": [
