--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -6,9 +6,9 @@ name: CI for Wp-menu-custom-fields
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [automation/playwright]
+    branches: [develop]
   pull_request:
-    branches: [automation/playwright]
+    branches: [develop]
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 jobs:
