--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -6,9 +6,13 @@ name: CI for Wp-menu-custom-fields
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [develop]
+    branches: 
+      - develop
+      - master
   pull_request:
-    branches: [develop]
+    branches: 
+      - develop
+      - master
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 jobs:
