--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -20,6 +20,12 @@ jobs:
     # The type of runner that the job will run on
     name: Run Wp-custom-menu fields 
     runs-on: ubuntu-latest
+    env: 
+      SHA: ${{ github.event.pull_request.head.sha }}
+      COMMIT_SHA: ${{ github.sha }}
+      PR_NUMBER: ${{ github.event.pull_request.number }}
+      working-directory: ./tests/e2e-playwright
+      TESRESULT_TOKEN: ${{ secrets.TESRESULT_TOKEN }}
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -46,6 +52,11 @@ jobs:
         with:
           name: report
           path: ./tests/e2e-playwright/artifacts
+
+       - name: run PR status
+        if: ${{ always() }}
+        run: node ./tests/e2e-playwright/bin/pr-status.js
+        working-directory: ${{env.working_directory}}
 
       - name: Cleanup
         if: ${{ always() }}
